# marrow

./: .env.example  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  BRAND.md  CHANGELOG.md  CLAUDE.md  CODEX_INSTRUCTIONS.md  DATABASE.md  HOST_MODE.md  LICENSE  Makefile  PRD.md  PROMPT.md  README.md  REPOS.md  ROADMAP.md  SECURITY.md  pyproject.toml
configs/: anthropic.yaml  cheap.yaml  default.yaml  express.yaml  express_stub.yaml  gemini.yaml  ollama.yaml  openrouter.yaml
skills/claude-code/marrow/: SKILL.md
skills/codex/marrow/: SKILL.md
src/marrow/: __init__.py  chunking.py  cli.py  config.py  embed.py  errors.py  host.py  ids.py  io.py  llm.py  logging.py  orchestrator.py  progress.py  slug.py  watch.py
src/marrow/prompts/: __init__.py  classify_sections.j2  coherence_audit.j2  coherence_fix.j2  coherence_score.j2  distill_chapter.j2  distill_continue.j2  examinee_answer.j2  extract_claims.j2  extract_graph.j2  fact_verify.j2  quiz_generate.j2  quiz_grade.j2  spine_extract.j2  summarize_community.j2  synthesize_chapter.j2
src/marrow/schemas/: __init__.py  brief.py  chunk.py  claim.py  classify.py  coherence.py  distill.py  document.py  graph.py  run.py  spine.py
src/marrow/stages/: stage_01_ingest.py  stage_02_chunk.py  stage_02_classify.py  stage_03_graph.py  stage_03_spine.py  stage_04_claims.py  stage_04_distill.py  stage_05_coherence.py  stage_05_synthesize.py  stage_05b_validate.py  stage_06a_evaluate.py  stage_06b_export.py
src/marrow/store/: ledger.py  vector.py
tests/: conftest.py  test_codex_provider.py  test_coherence.py  test_config.py  test_e2e.py  test_host.py  test_ids.py  test_llm.py  test_orchestrator.py  test_progress.py  test_watch.py
tests/stages/: test_01_ingest.py  test_02_chunk.py  test_03_graph.py  test_04_claims.py  test_05_synthesize.py  test_05b_validate.py  test_06a_evaluate.py
