[project]
name = "marrow"
version = "0.1.0"
description = "Lossless book-to-brief: turn a 300-page non-fiction book into a 50-page conceptual brief with citation-traceable, machine-verified completeness."
readme = "PRD.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ali Naserifar" }]
keywords = ["nlp", "summarization", "obsidian", "graphrag", "books"]

dependencies = [
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "docling>=2.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
mineru = ["mineru"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-recording>=0.13",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
marrow = "marrow.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marrow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "B008", "N818"]

[tool.ruff.lint.per-file-ignores]
"src/marrow/cli.py" = ["B904"]
"tests/*" = ["B904"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/marrow"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["docling.*", "reportlab.*", "lancedb.*", "nano_graphrag.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: end-to-end tests that hit Docling or write large fixtures",
    "network: tests that require network (skipped by default)",
]

[tool.coverage.run]
source = ["src/marrow"]
omit = ["src/marrow/prompts/*"]
