[project]
name = "marrow"
version = "2.0.0"
description = "Distill a 300-page non-fiction book into a faithful ~90-page brief with citation traceability."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ali Naserifar" }]
keywords = ["nlp", "distillation", "obsidian", "books", "non-fiction"]

dependencies = [
    "pydantic>=2.5",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "google-genai>=1.0",
    "docling>=2.0",
    "pypdf>=4.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
marrow = "marrow.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marrow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "B008", "N818"]

[tool.ruff.lint.per-file-ignores]
"src/marrow/cli.py" = ["B904"]
"tests/*" = ["B904"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/marrow"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["docling.*", "google.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "slow: end-to-end tests that hit Docling or external APIs",
]

[tool.coverage.run]
source = ["src/marrow"]
omit = ["src/marrow/prompts/*"]
